<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:typeface="monospace"
                android:layout_marginLeft="16dp" />

            <EditText
                android:id="@+id/new_house_desc_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:typeface="monospace"
                android:layout_marginLeft="16dp" />

            <EditText
                android:id="@+id/new_house_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <CheckBox
                android:id="@+id/new_house_use_my_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/use_my_contact_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/type"
                android:typeface="monospace"
                android:layout_marginLeft="16dp" />

            <Spinner
                android:id="@+id/new_house_type_spin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:entries="@array/crime_category"
                android:layout_marginLeft="16dp" />


            <ImageView
                android:id="@+id/addnewhouse_Image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_person_outline_black_24dp"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/upload_image_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginStart="16dp"
                android:onClick="uploadImage"
                android:text="@string/add_photo"
                android:layout_marginLeft="16dp" />

            <Button
                android:id="@+id/add_new_house_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/report"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>