<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF">


    <LinearLayout
        android:id="@+id/panic_btn"
        android:layout_width="379dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="3dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/red_circular"
            android:padding="15dp"
            android:src="@drawable/ic_forum_black_24dp"
            tools:ignore="ContentDescription,VectorDrawableCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="160dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/green_circular_bg"
            android:padding="8dp"
            android:src="@drawable/ic_format_quote_black_24dp"
            tools:ignore="ContentDescription,VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/help_me"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_emergency_btn"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="160dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/blue_circular_bg"
            android:padding="8dp"
            android:src="@drawable/ic_person_black_24dp"
            tools:ignore="ContentDescription,VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/contact_auth"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_report_btn"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_row="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentLeft="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/pink_circular_bg"
            android:padding="12dp"
            android:src="@drawable/ic_group_black_24dp"
            tools:ignore="ContentDescription,VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/report"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/iq_test_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/main_emergency_btn"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_alignParentRight="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/yellow_circular_bg"
            android:padding="8dp"
            android:src="@drawable/ic_lightbulb_outline_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/danger_zone"
            android:textSize="20dp" />

    </LinearLayout>

</RelativeLayout>

