<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmergencyContactActivity">
<!--<ScrollView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content">-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/npf"/>

            <TextView
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nigeria_police_force" />
            <ImageView
                android:id="@+id/call_police"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/telephone"
                android:layout_gravity="center_vertical"
                android:onClick="contactAgency"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/call_fire_services"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ffs"/>

            <TextView
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fedral_fire_service" />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/telephone"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/frsc"/>

            <TextView
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fedral_road_safty_corps" />
            <ImageView
                android:id="@+id/call_road_safty"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/telephone"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/npf"/>

            <TextView
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Rape Help Line" />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/telephone"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/npf"/>

            <TextView
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Rape Help Line" />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/telephone"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/npf"/>

            <TextView
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Rapid Response Squad" />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/telephone"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
<!--</ScrollView>-->
</LinearLayout>